# Isaac-ManipulaRL

./: .gitignore  README.md  baxter_isaac_controller.py
assets/baxter/: baxter_isaac.urdf  baxter_isaac_test.urdf
assets/baxter/baxter_description/: CMakeLists.txt  package.xml
assets/baxter/baxter_description/urdf/: baxter.urdf.xacro  baxter_isaac.urdf
assets/ur_assemble/: CMakeLists.txt  package.xml
docs/: .buildinfo  about_gym.html  faqs.html  genindex.html  index.html  install.html  objects.inv  release-notes.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: install.rst.txt  release-notes.rst.txt
docs/api/: index.html
docs/examples/: assets.html  index.html  rl.html  simple.html
docs/programming/: assets.html  forcesensors.html  graphics.html  index.html  math.html  physics.html  simsetup.html  tensors.html  tuning.html
docs/rl/: domainrandomization.html  framework.html  index.html
envs_test/: baxter_osc.py  baxter_osc_demonstration.py  baxter_osc_ros_server.py  baxter_test.py  franka_ik.py  isaac_ros_server.py  npresult1.txt  test.py  ur5_test.py
rlgpu/: filename.txt  rlg_train.py  train.py  train_separate.py
rlgpu/cfg/: baxter_cabinet.yaml  ur3_assembly.yaml  ur5_cabinet.yaml  ur5_package.yaml  ur5_pick_and_place.yaml
rlgpu/openai-gym-wrapper/: openaigym_wrapper.py
rlgpu/rl-pytorch/: setup.py
rlgpu/tasks/: baxter_cabinet copy.py  baxter_cabinet.py  baxter_cabinet_cant_demon.py  baxter_cabinet_cartesian.py  baxter_cabinet_her.py  baxter_cabinet_ik.py  baxter_cabinet_joint.py  baxter_pick_and_place.py  (+12 more)
(+689 files in other folders)
